syntax = "proto3";

package files.v1;

option go_package = "github.com/RA341/dockman/generated/files/v1";

service FileService {
  // root file management
  rpc Create(File) returns (Empty) {}
  rpc List(Empty) returns (ListResponse) {}
  rpc Delete(File) returns (Empty) {}
  rpc Exists(File) returns (Empty) {}
  rpc Rename(RenameFile) returns (Empty) {}
  rpc GetDockmanYaml(Empty) returns (DockmanYaml) {}
  rpc Format(FormatRequest) returns (FormatResponse) {}
}

message FormatRequest {
  string filename = 1;
}

message FormatResponse {
  string contents = 1;
}


message ListResponse {
  repeated FileGroup groups = 1;
}

message FileGroup {
  string root = 1;
  repeated string subFiles = 2;
}

message RenameFile {
  string oldFilePath = 1;
  string newFilePath = 2;
}

message File {
  string filename = 1;
}

message Empty {}

message DockmanYaml {
  bool useComposeFolders = 1;
  bool disableComposeQuickActions = 7;
  int32 tabLimit = 6;
  VolumesConfig volumesPage = 2;
  NetworkConfig networkPage = 3;
  ImageConfig imagePage = 4;
  ContainerConfig containerPage = 5;
}

message VolumesConfig {
  Sort sort = 1;
}

message NetworkConfig {
  Sort sort = 1;
}

message ImageConfig {
  Sort sort = 1;
}

message ContainerConfig {
  Sort sort = 1;
}


message Sort {
  string sortOrder = 1;
  string sortField = 2;
}
